clusters/contabo/squid-proxy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: squid-proxy
  labels:
    app: squid-proxy
