clusters/contabo/squid-proxy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: squid-proxy
  namespace: squid-proxy
  labels:
    app: squid-proxy
spec:
  type: ClusterIP
  ports:
    - port: 3128
      targetPort: 3128
      protocol: TCP
      name: http
  selector:
    app: squid-proxy
